correct mega-menu z-index

--- a/src/scss/pages/_header.scss
+++ b/src/scss/pages/_header.scss
@@ -76,6 +76,7 @@
         background: var(--clr-white-);
         border-top: 1px solid var(--clr-white-3);
         border-bottom: 3px solid var(--clr--main);
+        z-index: 10;
         ul {
             flex-grow: 1;
         }
